@@ -1,2 +1,0 @@
-(fn make-symbols (x &key (upcase? nil))
-  (@ [make-symbol (funcall (? upcase? #'upcase #'identity) _)] x))
