@@ -1,6 +1,7 @@
 Changes relative to tre-0.16:
   * Identifier obfuscation is not supported anymore.
   * Macros MAPCAR-MACRO and MAPCAN-MACRO have been removed.
+  * ASSOC-URL and MAKE-SYMBOLS have been removed.
   * *ENGLISH-NUMBERS* has been removed.
 
 Changes of tre-0.16 relative to tre-0.15:
